[project]
name = "notion2md"
version = "2.9.0"
description = "Notion Markdown Exporter with Python Cli"
license = {text = "MIT"}
authors = [{name = "echo724", email = "eunchan1001@gmail.com"}]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", 
    "Programming Language :: Python :: 3.9"
]
dependencies = [
    "notion-client>=1.0.0",
    "cleo>=1.0.0a4",
]

[project.urls]
Homepage = "https://github.com/echo724/notion2md.git"

[project.scripts]
notion2md = 'notion2md.console.application:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Keep your existing tool configurations
[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["notion2md", "tests"]
filter_files = true
known_first_party = "notion2md"

[tool.black]
line-length = 79
